# 17lands-analyzer

./: .gitignore  README.md  main.py  pyproject.toml  strixhaven_analysis.ipynb
data/: card-ratings-2026-04-21.csv  card-ratings-2026-04-22.csv  card-ratings-2026-04-23.csv  card-ratings-2026-04-25.csv
output/: the humble interceptor
